Improved: CheckManager